--- a/stocks/quotes/templates/home.html
+++ b/stocks/quotes/templates/home.html
@@ -1,1 +1,24 @@
-<h1>hello world</h1>
+{% extends 'base.html' %}
+{% block content %}
+
+
+{% if api %}
+    {% if api == "Error..." %}
+        There was a problem with your ticker symbol,
+        please try again...
+    {% else %}
+
+        <h1>{{ api.companyName }}</h1><br>
+        Price: ${{ api.latestPrice }}<br>
+        Previous Close: {{ api.previousClose }}<br>
+        Market Cap: {{ api.marketCap }}<br>
+        YTD Change: {{ api.ytdChange }}<br>
+        52Wk High: {{ api.week52High }}<br>
+        52Wk Low: {{ api.week52Low }}<br>
+
+
+    {% endif %}
+{% endif %}
+
+
+{% endblock %}
